@@ -1,3 +1,8 @@
+2010-05-11  Marek Safar  <marek.safar@gmail.com>
+
+	A fix for bug #604239
+	* generic.cs: Copy partial type constraints to partial container.
+
 2010-05-10  Marek Safar  <marek.safar@gmail.com>
 
 	A fix for bug #557210
